--- a/adspygoogle/adwords/ChangeLog
+++ b/adspygoogle/adwords/ChangeLog
@@ -1,3 +1,6 @@
+15.0.2:
+- One more attempt at fixing installer script for issue # 5.
+
 15.0.1:
 - Fix for oversight in installer script.  Addresses issue # 5.
 
