--- a/adspygoogle/adwords/ChangeLog
+++ b/adspygoogle/adwords/ChangeLog
@@ -1,3 +1,7 @@
+15.0.4:
+- Updated ReportDownloader to provide a developerToken with report downloads.
+- Version 3.0.2 of common lib addresses issue # 6.
+
 15.0.3:
 - Fixing OAuth handling after refactoring methods to properties.
 
