--- a/adspygoogle/common/ChangeLog
+++ b/adspygoogle/common/ChangeLog
@@ -1,3 +1,8 @@
+3.0.2:
+- Updated the SOAPpy.patch file to version 1.0.1. Added an explicit __str__
+  function to SOAPpy.Client.__Method to prevent odd behavior when the str()
+  function was called on an object of this class. This addresses issue 6.
+
 3.0.1:
 - Modified MessageHandler to not pack items that evaluate to False into SOAP
   requests.
