--- a/adspygoogle/adwords/ChangeLog
+++ b/adspygoogle/adwords/ChangeLog
@@ -1,3 +1,7 @@
+15.1.0:
+- Adding support and example for CreateAccountService.
+- Addressing issue # 12.
+
 15.0.6:
 - Fixing get_account_hierarchy.py v201109 code example.
 - Altering ReportDownloader to better handle 400/500 errors. They will now be
