--- a/adspygoogle/adwords/ChangeLog
+++ b/adspygoogle/adwords/ChangeLog
@@ -1,3 +1,6 @@
+15.1.1:
+- Version 3.0.4 of the common lib addresses issue # 13.
+
 15.1.0:
 - Adding support and example for CreateAccountService.
 - Addressing issue # 12.
