--- a/adspygoogle/common/ChangeLog
+++ b/adspygoogle/common/ChangeLog
@@ -1,3 +1,7 @@
+3.0.7:
+- Patched MessageHandler's PackForSoappy function to no longer treat strings and
+  unicode strings the same way.
+
 3.0.6:
 - Added a patch to MessageHandler's _RestoreListTypesForResponse function. It
   will now check any returned object for a field ending with ".Type" and use
