Fixing issue #30 - report download logging with request_log disabled is broken.

--- a/adspygoogle/adwords/ChangeLog
+++ b/adspygoogle/adwords/ChangeLog
@@ -1,3 +1,6 @@
+15.2.4:
+- Fixing bug with ReportDownloader logging when request_log is disabled.
+
 15.2.3:
 - Adding logging to ReportDownloader, to aid in troubleshooting.
 
