--- a/adspygoogle/dfa/ChangeLog
+++ b/adspygoogle/dfa/ChangeLog
@@ -1,3 +1,6 @@
+2.3.1:
+- Picking up changes to common layer which fix issue 48.
+
 2.3.0:
 - Added support for v1.19. Removed support for v1.17.
 - Added support for OAuth2. See use_oauth2.py for example.
