--- a/adspygoogle/adwords/ChangeLog
+++ b/adspygoogle/adwords/ChangeLog
@@ -1,3 +1,8 @@
+15.6.2:
+- Bumped the common library version to 3.0.11. This fixes issues 51 and 56.
+- The ReportDownloader now raises a more useful error if it encounters a problem
+  other than an HTTPError when downloading reports. This fixes issue 52.
+
 15.6.1:
 - Bumped the common library version to 3.0.10.
 - Added examples for enhanced campaigns.
