--- a/adspygoogle/dfp/ChangeLog
+++ b/adspygoogle/dfp/ChangeLog
@@ -1,3 +1,6 @@
+9.6.2:
+- Bumped the common library version to 3.0.11. This fixes issue 57.
+
 9.6.1:
 - Bumped the common library version to 3.0.10.
 
