--- a/adspygoogle/dfa/ChangeLog
+++ b/adspygoogle/dfa/ChangeLog
@@ -1,3 +1,8 @@
+2.3.3:
+- Bumped the common library version to 3.0.12. Error parsing now works correctly
+  for both XML parsers with pretty_xml on or off. All combinations of XML parser
+  to pretty_xml now return the same, correct errors.
+
 2.3.2:
 - Bumped the common library version to 3.0.10.
 
