--- a/adspygoogle/dfp/README
+++ b/adspygoogle/dfp/README
@@ -100,8 +100,9 @@ Step-by-step guide for accessing the test account:
    at https://developers.google.com/doubleclick-publishers/docs/developers_guide#headers.
    Example,
 
-   Login email: joe.shmoe@gmail.com
-   Login password: secret
+   OAuth 2.0 client ID: xxxxxxxxxxxxxx
+   OAuth 2.0 client secret: xxxxxxxxxxxxxx
+   OAuth 2.0 refresh token: xxxxxxxxxxxxxx
    Network code: 123456
    Application name: GoogleTest
 
