--- a/adspygoogle/adwords/ChangeLog
+++ b/adspygoogle/adwords/ChangeLog
@@ -1,3 +1,8 @@
+15.9.1:
+- The ReportDownloader will now refresh OAuth 2.0 credentials if necessary
+  before downloading reports. This resolves issue #73.
+- Bumped the common library version to 3.1.1. This resolves issue #72.
+
 15.9.0:
 - Bumped the common library version to 3.1.0. Support for OAuth 2.0 has been
   improved and is now the preferred way of authenticating. Using ClientLogin
